--- a/public/index.html
+++ b/public/index.html
@@ -11,19 +11,18 @@
 <body ng-app="webapp">
     <div class="container" ng-controller="NewsController">
         <h2>News</h2>
-        <div class="row">
+        <div class="row" ng-repeat="news in list">
             <div class="col-sm-2">
                 <small ng-bind='news.creatTime'></small>
             </div>
             <div class="col-sm-10">
-                <a href="javascript: void(0)" ng-click="openDetail(news._id)">fff{{news.title}}</a>
+                <a href="javascript:void(0)" ng-click="openDetail(news._id)">{{news.title}}{{news._id}}</a>
             </div>
         </div>
         <div class="modal fade" id="modal-detail">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                         <h4 class="modal-title" ng-bind="current.title"></h4>
                         <span ng-bind="current.creatTime"></span>
                     </div>
@@ -32,7 +31,6 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary">Save changes</button>
                     </div>
                 </div>
                 <!-- /.modal-content -->
